test/types/tuple/deitz/test_param_tuple_arg1-error.good
test_param_tuple_arg1-error.chpl:7: error: unresolved call 'foo(3, (int,int))'
test_param_tuple_arg1-error.chpl:1: note: candidates are: foo(param rank: int, x: rank*int)
