test/types/tuple/deitz/test_param_tuple_arg1-error.chpl
function foo(param rank : integer, x : (rank*integer)) {
  writeln(x);
}

var x : 2*integer;
foo(2, x);
foo(3, x);
